--- a/backend/package.json
+++ b/backend/package.json
@@ -24,6 +24,7 @@
   "license": "MIT",
   "dependencies": {
     "@parse/node-apn": "^6.0.0",
+    "@types/node-cron": "^3.0.11",
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -37,6 +38,7 @@
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
