--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   logger: ^2.0.2+1
   equatable: ^2.0.5
   freezed_annotation: ^2.4.1
+  path: ^1.9.0
 
   # Charts
   fl_chart: ^0.66.0
