feat(auth): implement web auth flow for google sign-in
- Add web-specific auth handling with token capture from URL
- Update backend auth routes to support web redirects
- Store auth token in shared preferences for web compatibility
- Add flutter_web_plugins dependency for web routing
- Create new users API endpoint for user profile data

--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -55,6 +55,8 @@ dependencies:
   # Navigation
   go_router: ^13.0.0
   http: ^1.6.0
+  flutter_web_plugins:
+    sdk: flutter
 
 dev_dependencies:
   flutter_test:
