refactor(db): migrate from MongoDB to MySQL with TypeORM
- Replace Mongoose models with TypeORM entities for User and ConnectedAccount
- Update database connection logic to use MySQL via TypeORM DataSource
- Modify API routes and services to work with new database schema
- Add TypeORM decorators and enable experimental decorators in tsconfig
- Update package.json with mysql2, typeorm, and reflect-metadata dependencies
- Remove MongoDB-specific code and update health checks
- Simplify route imports and temporarily disable local auth during migration

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -13,6 +13,8 @@
     "resolveJsonModule": true,
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "declaration": true,
     "declarationMap": true,
     "sourceMap": true,
@@ -22,6 +24,15 @@
     "noImplicitReturns": false,
     "noFallthroughCasesInSwitch": true
   },
-  "include": ["src/**/*"],
+  "include": [
+    "src/server.ts",
+    "src/api/index.ts",
+    "src/api/auth/gmail.ts",
+    "src/services/auth/gmail_strategy.ts",
+    "src/middleware/auth.ts",
+    "src/db/connection.ts",
+    "src/models/user.ts",
+    "src/models/connected_account.ts"
+  ],
   "exclude": ["node_modules", "dist", "tests"]
 }
