--- a/backend/package.json
+++ b/backend/package.json
@@ -38,10 +38,13 @@
     "imap-simple": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "mysql2": "^3.15.3",
     "node-cron": "^4.2.1",
     "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.27",
     "winston": "^3.11.0"
   },
   "devDependencies": {
