feat(messages): implement dual storage for messages with MySQL and MongoDB
Add MessageSql entity for MySQL storage while maintaining MongoDB compatibility
Update message aggregator to query from MySQL first
Modify sync services to store messages in both databases
Add MongoDB connection setup in server startup
Refactor models to use string IDs instead of ObjectId

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,14 +25,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": [
-    "src/server.ts",
-    "src/api/index.ts",
-    "src/api/auth/gmail.ts",
-    "src/services/auth/gmail_strategy.ts",
-    "src/middleware/auth.ts",
-    "src/db/connection.ts",
-    "src/models/user.ts",
-    "src/models/connected_account.ts"
+    "src/**/*.ts"
   ],
   "exclude": ["node_modules", "dist", "tests"]
 }
